Start of cryptoanalizator