@@ -2,18 +2,19 @@ package src;
 
 import java.io.IOException;
 import java.nio.file.*;
+import java.util.*;
 
 public class FileManager {
-    public String readFile(String filePath) throws IOException {
+    public List<String> readFile(String filePath) throws IOException {
         // Логика чтения файла
-        Path path = Paths.get(filePath);
-        return Files.readString(path);
+        Path path = Path.of(filePath);
+        return Files.readAllLines(path);
     }
-    public void writeFile(String content, String filePath) {
+    public void writeFile(List<String> content, String filePath) {
         // Логика записи файла
         try {
             Files.createFile(Path.of(filePath));
-            Files.writeString(Path.of(filePath), content);
+            Files.write(Path.of(filePath), content);
         }
         catch (IOException e) {
             System.out.println("Неизвестная ошибка");
